--- a/package.json
+++ b/package.json
@@ -20,15 +20,19 @@
     "eslint": "8.49.0",
     "eslint-config-next": "13.5.1",
     "lucide-react": "^0.441.0",
-    "next": "13.5.1",
-    "postcss": "8.4.30",
-    "react": "18.2.0",
+    "next": "^14.2.12",
+    "postcss": "^8.4.47",
+    "react": "^18.3.1",
     "react-beautiful-dnd": "^13.1.1",
-    "react-dom": "18.2.0",
-    "shadcn-ui": "^0.9.1",
+    "react-dom": "^18.3.1",
+    "shadcn": "^1.0.0",
+    "shadcn-ui": "^0.2.3",
     "tailwind-merge": "^2.5.2",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "5.2.2"
+  },
+  "devDependencies": {
+    "@types/react-beautiful-dnd": "^13.1.8"
   }
 }
