--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-dom": "^18.3.1",
     "shadcn": "^1.0.0",
     "shadcn-ui": "^0.2.3",
+    "table": "^6.8.2",
     "tailwind-merge": "^2.5.2",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.7",
