--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "framer-motion": "^11.5.5",
     "lucide-react": "^0.441.0",
     "next": "^14.2.12",
+    "next-themes": "^0.3.0",
     "postcss": "^8.4.47",
     "react": "^18.3.1",
     "react-beautiful-dnd": "^13.1.1",
